--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,29 @@
     }
   }
 
+  .drawnNumbersContainer {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+
+    span {
+      display: inline-block;
+      text-align: center;
+      width: 1.25rem;
+      height: 1.25rem;
+      font-size: 1rem;
+      padding: 0.1rem;
+      border: 1px solid #000;
+      border-radius: 50%;
+      margin-bottom: 3px;
+      margin-right: 3px;
+
+      &.found {
+        background: orange;
+      }
+    }
+  }
+
   .bingo {
     display: grid;
     grid-auto-flow: column;
